# R-Type

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  conan.txt.bck  conanfile.txt  install.sh  rfc9999.txt
Client/: Makefile  R-type_menu_test
Client/include/: Background.hpp  Button.hpp  Game.hpp  Image.hpp  IoServiceWork.hpp  Menu.hpp  Music.hpp  Paralax.hpp  TextField.hpp  Window.hpp  tmp.hpp
Client/include/Constants/: constants.hpp
Client/include/Network/: UDPClient.hpp
Client/include/Network/StreamBuffer/: TCPStreamBuffer.hpp  UDPClientStreamBuffer.hpp  UDPServerStreamBuffer.hpp
Client/src/: Background.cpp  Button.cpp  Game.cpp  Image.cpp  Menu.cpp  Music.cpp  Paralax.cpp  TextField.cpp  Timer.cpp  Window.cpp  main.cpp
Client/src/Network/: UDPClient.cpp
Client/src/Network/StreamBuffer/: UDPClientStreamBuffer.cpp  UDPServerStreamBuffer.cpp
Server/include/: AISystem.hpp  ASystem.hpp  Constants.hpp  Entity.hpp  EntityManager.hpp  FrameSendingSystem.hpp  GameLoop.hpp  HitboxSystem.hpp  IComponent.hpp  IComponents.hpp  ISystem.hpp  IoServiceWork.hpp  PlayerSystem.hpp  SafeQueue.hpp  Timer.hpp  WeaponSystem.hpp
Server/include/Components/: AComponent.hpp  AI.hpp  Acceleration.hpp  Damages.hpp  Drawable.hpp  Health.hpp  HitBox.hpp  IComponent.hpp  Position.hpp  Weapon.hpp
Server/include/Network/: AServer.hpp  TCPServer.hpp  TCPServerRoutine.hpp  TCPStreamBuffer.hpp  UDPServer.hpp
Server/include/Network/Components/: AServerComponent.hpp  Actions.hpp  ConnectComponent.hpp  Directions.hpp  Events.hpp  IServerComponent.hpp  MessageComponent.hpp  MoveComponent.hpp
Server/include/Network/DataStruct/: Lobby.hpp  Player.hpp
Server/include/Network/StreamBuffer/: AStreamBuffer.hpp  UDPClientStreamBuffer.hpp  UDPServerStreamBuffer.hpp
Server/src/: GameLoop.cpp  main.cpp
Server/src/Ecs/: AISystem.cpp  Entity.cpp  EntityManager.cpp  FrameSendingSystem.cpp  HitboxSystem.cpp  PlayerSystem.cpp  WeaponSystem.cpp
Server/src/Ecs/Components/: Acceleration.cpp  Damages.cpp  Drawable.cpp  Health.cpp  HitBox.cpp  Position.cpp
Server/src/Network/: AServer.cpp  AStreamBuffer.cpp  TCPServer.cpp  TCPServerRoutine.cpp  TCPStreamBuffer.cpp  UDPServer.cpp
Server/src/Network/Components/: AServerComponent.cpp  ConnectComponent.cpp  MessageComponent.cpp  MoveComponent.cpp
Server/src/Network/StreamBuffer/: AStreamBuffer.cpp  TCPStreamBuffer.cpp  UDPClientStreamBuffer.cpp  UDPServerStreamBuffer.cpp
Server/tests/: CMakeLists.txt  EntityManagerTests.cpp  EntityTests.cpp  HitboxSystemTests.cpp
